Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136770

QLineSeries.clear() does not remove all lines from the plot in that series

XMLWordPrintable

    • 0a0ba8575 (dev), 5d3131f91 (6.10), ad62a0e1c (6.9), 952ec1161 (tqtc/lts-6.8), b19fdf533 (tqtc/lts-6.5)

      The QLineSeries.clear() method appears to correctly delete points in a QLineSeries, but only gets rid of some lines made in the plot from those points, not all of them.

      Steps to Reproduce:

      I've attached a script where a simple LineSeries plot is made on 2 ValueAxis objects.  There is a button attached to a slot that will clear the points in the QLineSeries object.  After this button is pressed, the points on the QLineSeries are removed, but there is still a line that exists on the plot despite no points existing.  Trying to call QPolarChart.update() or the QChartView.repaint() doesn't seem to have any effect.

      Expected Results:

      All points and lines should be removed.

      Actual Results:

      There are some artifacts of the previous lines that remain even after the points are removed.  See attached picture.

      Extra Information:

      We've tested this on both Mac and Windows and seen the same results.

        1. qlineseries_clear_bug-1.py
          3 kB
          Rich Wenner
        2. remaining_lines.png
          234 kB
          Rich Wenner
        For Gerrit Dashboard: QTBUG-136770
        # Subject Branch Project Status CR V

            anmaatta Antti Määttä
            rich_schrodinger Rich Wenner
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes