Clear polar paths when the series is empty

If the polar chart gets cleared, the old series is still drawn, because
the m_linePathPolarLeft/Right are not cleared properly.

Pick-to: 6.8 6.5
Fixes: QTBUG-136770
Change-Id: I2ff4946c6948a40b6766cba069e3698d65cbfedd
Reviewed-by: Janne Roine <janne.roine@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit 0a0ba8575e033379caecae4de0ab38cfd6f90528)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5d3131f91dfc39ed6df6b507aa859a6ae850b544)